--- a/css/styles.css
+++ b/css/styles.css
@@ -106,3 +106,130 @@ header{
 .spacer-half{
     flex-grow: 0.5;
 }
+
+button.icon {
+    background: none;
+    background-image: none;
+    background-position-x: initial;
+    background-position-y: initial;
+    background-size: initial;
+    background-repeat-x: initial;
+    background-repeat-y: initial;
+    background-attachment: initial;
+    background-origin: initial;
+    background-clip: initial;
+    background-color: initial;
+    border: none;
+    cursor: pointer;
+    padding: 0 4px;
+}
+
+.nightmode {
+    --color-present: var(--darkendYellow);
+    --color-correct: var(--darkendGreen);
+    --color-absent: var(--color-tone-4);
+    --tile-text-color: var(--color-tone-1);
+    --key-text-color: var(--color-tone-1);
+    --key-evaluated-text-color: var(--color-tone-1);
+    --key-bg: var(--color-tone-2);
+    --key-bg-present: var(--color-present);
+    --key-bg-correct: var(--color-correct);
+    --key-bg-absent: var(--color-absent);
+    --modal-content-bg: var(--color-tone-7);
+}
+
+:root, .nightmode {
+    --color-background: var(--color-tone-7);
+}
+
+.nightmode {
+    --color-tone-1: #ffffff;
+    --color-tone-2: #818384;
+    --color-tone-3: #565758;
+    --color-tone-4: #3a3a3c;
+    --color-tone-5: #272729;
+    --color-tone-6: #1a1a1b;
+    --color-tone-7: #121213;
+    --color-nav-hover: #2f2f31;
+    --opacity-50: rgba(0, 0, 0, 0.5);
+    --spelling-bee: url(./images/nav-icons/SpellingBee-Icon-Normalized-Color.svg);
+    --daily: url(./images/nav-icons/Crossword-Icon-Normalized-Color.svg);
+    --mini: url(./images/nav-icons/Mini-Icon-Normalized-Color.svg);
+    --tiles: url(./images/nav-icons/Tiles-Icon-Normalized-Color.svg);
+    --sudoku: url(./images/nav-icons/Sudoku-Icon-Normalized-Color.svg);
+    --vertex: url(./images/nav-icons/Vertex-Icon-Normalized-Color.svg);
+    --letter-boxed: url(./images/nav-icons/LetterBoxed-Icon-Normalized-Color.svg);
+    --nyt: url(./images/nav-icons/NYT-Icon-Normalized-Color.svg);
+    --athletic: url(./images/nav-icons/Athletic-Icon-Normalized-Color.svg);
+    --wordlebot: url(./images/nav-icons/WordleBot-Icon-Normalized-Color.svg);
+    --promo-icon-border-radius: 4px;
+    --promo-icon-height: 40px;
+    --promo-icon-width: 40px;
+    --promo-icon-padding: 0px;
+    --svg-arrow-fill: var(--color-tone-7);
+    --svg-arrow-stroke: white;
+    --svg-arrow-fill-hover: white;
+    --svg-arrow-stroke-hover: black;
+}
+:root {
+    --color-present: var(--yellow);
+    --color-correct: var(--green);
+    --color-absent: var(--color-tone-2);
+    --tile-text-color: var(--color-tone-7);
+    --key-text-color: var(--color-tone-1);
+    --key-evaluated-text-color: var(--color-tone-7);
+    --key-bg: var(--color-tone-4);
+    --key-bg-present: var(--color-present);
+    --key-bg-correct: var(--color-correct);
+    --key-bg-absent: var(--color-absent);
+    --modal-content-bg: var(--color-tone-7);
+}
+:root {
+    --color-tone-1: #000000;
+    --color-tone-2: #787c7e;
+    --color-tone-3: #878a8c;
+    --color-tone-4: #d3d6da;
+    --color-tone-5: #edeff1;
+    --color-tone-6: #f6f7f8;
+    --color-tone-7: #ffffff;
+    --color-nav-hover: #f4f4f4;
+    --opacity-50: rgba(255, 255, 255, 0.5);
+}
+:root {
+    --green: #6aaa64;
+    --darkendGreen: #538d4e;
+    --yellow: #c9b458;
+    --darkendYellow: #b59f3b;
+    --lightGray: #d8d8d8;
+    --gray: #86888a;
+    --darkGray: #939598;
+    --white: #fff;
+    --black: #212121;
+    --orange: #f5793a;
+    --blue: #85c0f9;
+    font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+    font-size: 16px;
+    --header-height: 50px;
+    --keyboard-height: 200px;
+    --game-max-width: 500px;
+    --spelling-bee: url(./images/nav-icons/SpellingBee-Icon-Normalized.svg);
+    --daily: url(./images/nav-icons/Crossword-Icon-Normalized.svg);
+    --mini: url(./images/nav-icons/Mini-Icon-Normalized.svg);
+    --tiles: url(./images/nav-icons/Tiles-Icon-Normalized.svg);
+    --sudoku: url(./images/nav-icons/Sudoku-Icon-Normalized.svg);
+    --vertex: url(./images/nav-icons/Vertex-Icon-Normalized.svg);
+    --letter-boxed: url(./images/nav-icons/LetterBoxed-Icon-Normalized.svg);
+    --nyt: url(./images/nav-icons/NYT-Icon-Normalized.svg);
+    --wirecutter: url(./images/nav-icons/Wirecutter-Icon-Normalized.svg);
+    --cooking: url(./images/nav-icons/Cooking-Icon-Normalized.svg);
+    --athletic: url(./images/nav-icons/Athletic-Icon-Normalized.svg);
+    --wordlebot: url(./images/nav-icons/WordleBot-Icon-Normalized.svg);
+    --promo-icon-border-radius: 0px;
+    --promo-icon-height: 40px;
+    --promo-icon-width: 40px;
+    --promo-icon-padding: 0px;
+    --svg-arrow-fill: white;
+    --svg-arrow-stroke: black;
+    --svg-arrow-fill-hover: black;
+    --svg-arrow-stroke-hover: white;
+}
